[package]
name = "binance_order_book"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
rust_decimal = "1.37.2"
rustls = { version = "0.23.29", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
